[package]
name = "bmark_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
anyhow = "1.0.86"
regex = "1.10.6"
uuid = { version = "1.10.0", features = ["v7"] }
